Fixed image stretch for profile dropdown image

--- a/bekindred/static/persiceApp/src/app/components/app.css
+++ b/bekindred/static/persiceApp/src/app/components/app.css
@@ -21,7 +21,6 @@
   height: 100%;
   width: 6px;
   display: inline-block;
-
   -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
   animation: sk-stretchdelay 1.2s infinite ease-in-out;
 }
@@ -47,15 +46,24 @@
 }
 
 @-webkit-keyframes sk-stretchdelay {
-  0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
-  20% { -webkit-transform: scaleY(1.0) }
+  0%,
+  40%,
+  100% {
+    -webkit-transform: scaleY(0.4)
+  }
+  20% {
+    -webkit-transform: scaleY(1.0)
+  }
 }
 
 @keyframes sk-stretchdelay {
-  0%, 40%, 100% {
+  0%,
+  40%,
+  100% {
     transform: scaleY(0.4);
     -webkit-transform: scaleY(0.4);
-  }  20% {
+  }
+  20% {
     transform: scaleY(1.0);
     -webkit-transform: scaleY(1.0);
   }
@@ -65,15 +73,32 @@
   z-index: 9999;
 }
 
+
 /*temp fix for streched images in search results */
+
 .flag__img .avatar-holder {
   margin: 0 auto;
   border-radius: 50%;
   width: 64px;
   height: 64px;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
 }
 
+.profile-drop__avatar .avatar-holder {
+  margin: 0 auto;
+  border-radius: 50%;
+  width: 56px;
+  height: 56px;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+}
 
+.profile-drop__avatar .avatar-holder img {
+  display: none;
+}
 
 
 /* fix for keywords wrap in filter */
